added lock_roles_setup for single roles setups rotations
